<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="nef.naityeityfor.bigbcompany.ActEncuestas" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

     <item android:id="@+id/action_usuario"
          android:icon="@drawable/bb_action_usuario"
          android:title="@string/action_usuario"
          android:showAsAction="ifRoom"/>
    
    <item android:id="@+id/action_noticias"
          android:icon="@drawable/bb_action_noticias"
          android:title="@string/action_noticias"
          android:showAsAction="ifRoom" />

    <item android:id="@+id/action_contactos"
          android:icon="@drawable/bb_action_contactos"
          android:title="@string/action_contactos"
          android:showAsAction="ifRoom" />
 
    <item android:id="@+id/action_encuestas"
          android:icon="@drawable/bb_action_encuestas_on"
          android:title="@string/action_encuestas"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          android:showAsAction="ifRoom" />
    
</menu>
